# PkUtilities

./: .gitignore  ChangeLog.md  LICENSE  README.md  hie.yaml  package.yaml  pkutilities.cabal  stack.yaml
app/dataedit/: DataEdit.hs  Main.hs
app/listedit/: ListEdit.hs  Main.hs
src/: Command.hs  Lib.hs
src/Base/: Command.hs  Interface.hs  Lib.hs
src/DataEdit/: App.hs  DataRep.hs  Modifier.hs  SQLData.hs
src/ListEdit/: App.hs
