cabal-version: 1.12

name:           pkutilities
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/Abastro/PkUtilities#readme>
homepage:       https://github.com/Abastro/PkUtilities#readme
bug-reports:    https://github.com/Abastro/PkUtilities/issues
author:         Abastro
maintainer:     Abastro
copyright:      2020 Abastro
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/Abastro/PkUtilities

library
  exposed-modules:
      Base.Command
      Base.Interface
      DataEdit.App
      DataEdit.DataRep
      ListEdit.App
  other-modules:
      Paths_pkutilities
  hs-source-dirs:
      src
  default-extensions:
      FlexibleContexts
      FlexibleInstances
      DeriveFunctor
      DeriveFoldable
      DeriveTraversable
      TupleSections
  build-depends:
      base >=4.7 && <5
    , bytestring ==0.10.*
    , containers ==0.6.*
    , direct-sqlite ==2.3.*
    , mtl ==2.2.*
    , text ==1.2.*
  default-language: Haskell2010

executable dataedit
  main-is: Main.hs
  other-modules:
      Paths_pkutilities
  hs-source-dirs:
      app/dataedit
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , pkutilities
  default-language: Haskell2010

executable listedit
  main-is: Main.hs
  other-modules:
      Paths_pkutilities
  hs-source-dirs:
      app/listedit
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , pkutilities
  default-language: Haskell2010

test-suite PkUtilities-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_pkutilities
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , pkutilities
  default-language: Haskell2010
